--- a/src/App.css
+++ b/src/App.css
@@ -86,5 +86,40 @@ nav{
 }
 
 .imgOfMe{
-  width: 20%;
+  width: 40vmin;
+}
+.home{
+  width: fit-content;
+  margin: auto;
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #4b575a;
+}.homeLeft{
+  margin: 20px;
+  width: 40vmin;
+}
+.homeLeftTitle{
+  font-size: 6vmin;
+  text-transform: capitalize;
+  font-weight: 800;
+  margin-bottom: 30px;
+}
+.homeLeftBody{
+  font-size: 5vmin;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.learnMoreBtn{
+  padding: 8px;
+  border:none;
+  border-radius: 5px;
+  color: white;
+  background-color: var(--blue);
+  position: relative;
+  top: 15%;
+  left: 30%;
+  width: fit-content;
+  font-size: ;
 }
