seperateing css into diffeterent files in (styles) folder

--- a/src/App.css
+++ b/src/App.css
@@ -1,150 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-:root{
-  --blue: #f46565;
-  --white: white;
-  
-  --body-background-color: white;
-  --nav-bar-background: #3A4446;
-}
 
-
-*{
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-}
-body{
-  background-color: var(--body-background-color);
-}
-
-/* navigation bar */
-
-nav{
-  padding: 15px;
-  background-color: var(--nav-bar-background);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-/* right side of nav bar */
-.rightNav{
-  transition: all 1s;
-  width: 40%;
-}.rightNavUl{
-  display: flex;
-  justify-content: space-evenly;
-  text-transform: capitalize;
-  font-size: 1.3em;
-  cursor: pointer;
-  list-style: none;
-}
-a{
-  transition: all 0.3s ease-in;
-  text-decoration: none;
-  color: var(--white);
-}.rightNavUl li:hover a{
-  color: var(--blue);
-}
-
-
-/* left side of nav bar */
-.leftNav{
-  font-size: 1.5em;
-  font-weight: 900;
-  color: var(--white);
-}
-
-
-/* button for showing the nav bar in small devices */
-.menuBarBtn{
-  display: none;
-  position: absolute;
-  top: 2%;
-  right: 3%;
-  cursor: pointer;
-}.line{
-  width: 40px;
-  height: 6px;
-  background-color: var(--white);
-  margin: 5px;
-  transition: all 0.2s ease-out;
-}
-
-@media (max-width: 800px){
-  .rightNav{
-    position: absolute;
-    background-color: var(--nav-bar-background);
-    width: 100%;
-    left: -100%;
-    top: 58px;
-  }.rightNavUl{
-    flex-direction: column;
-    text-align: center;
-  }.rightNavUl li{
-    padding: 10px;
-  }
-  .rightNavUl li:hover{
-    background-color: #4b575a;
-  }
-
-  .menuBarBtn{
-    display: inline-block;
-  }
-}
-#showMenuList{
-  left: 0px;
-}#hideMenuList{
-  left: -100%;
-  opacity: 50%;
-}
-
-
-/* home page */
-.home{
-  width: fit-content;
-  margin: auto;
-  margin-top: 60px;
-  display: flex;
-  justify-content: space-between;
-}.homeLeft{
-  margin: 20px;
-  margin-right: 10px;
-  width: 45vmin;
-}
-
-/* Omar Chatin */
-.homeLeftTitle{
-  font-size: 6vmin;
-  text-transform: capitalize;
-  font-weight: 800;
-  margin-bottom: 30px;
-}
-/* Profitional Ux/Ui Desginer */
-.homeLeftBody{
-  font-size: 5vmin;
-  font-weight: 400;
-  text-transform: capitalize;
-}
-/* Learn More */
-.learnMoreBtn{
-  padding: 8px;
-  border:none;
-  border-radius: 5px;
-  color: var(--white);
-  background-color: var(--blue);
-  position: relative;
-  top: 15%;
-  left: 30%;
-  width: fit-content;
-  font-size: 2.5vmin;
-  cursor: pointer;
-}.learnMoreBtn:hover{
-  transform: scale(1.07);
-}
-.imgOfMe{
-  width: 40vmin;
-}
-
-
-
+@import './styles/homePage.css';
+@import './styles/navBar.css';
+@import './styles/cssElements.css';
