--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -25,7 +25,7 @@ nav{
     transition: all 0.3s ease-in;
     text-decoration: none;
     color: var(--white);
-  }.rightNavUl li:hover a{
+  }.rightNavUl a:hover{
     color: var(--blue);
   }
   
