--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,36 @@ a{
 
 
 
-.showMenuBar{}
+.showMenuBar{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+
+.line1,.line2{
+    background-color: white;
+    width: 35px;
+    height: 7px;
+    border-radius: 5px;
+    margin: 3px;
+}.line1{
+    margin-left: -10px;
+}
+
+@media (max-width: 550px){
+    .right-nav{
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 50px;
+        left: 0px;
+    }
+    .right-nav li{
+        margin-top: 10px;
+    }
+
+}
