--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ a{
     width: 25px;
     cursor: pointer;
     transition: all .5s ease-in-out;
+    z-index: 100;
 }
 
 
@@ -56,14 +57,6 @@ a{
 
 
 
-.showMenuBar{
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    width: fit-content;
-    display: flex;
-    flex-direction: column;
-}
 
 .line1,.line2{
     background-color: white;
@@ -81,7 +74,6 @@ a{
         width: 100%;
         text-align: center;
         position: absolute;
-        top: 50px;
         left: 0px;
     }
     .right-nav li{
