--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.content-width {
+  @apply xl:max-w-7xl 
+    md:max-w-5xl
+    px-8
+    transition-all w-full;
+}
+
+/* Rectangle 2 */
