working on home page

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,20 @@
     px-8
     transition-all w-full;
 }
+.smaller-content-width {
+  @apply xl:max-w-5xl 
+    md:max-w-3xl
+    px-8
+    transition-all w-full;
+}
 
 /* Rectangle 2 */
+.blob {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml;utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width=%22895.443%22 height=%22791.383%22 viewBox=%2237.888 73.261 895.443 791.383%22%3E%3Cdefs%3E%3ClinearGradient id=%22b%22%3E%3Cstop offset=%22NaN%25%22 stop-color=%22%233a00ff%22%2F%3E%3C%2FlinearGradient%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M914.5 629q-59.5 129-198 120.5t-242 70Q371 898 241.5 840t-185-199Q1 500 111 398.5t194-171q84-69.5 216.5-135t164 92Q717 342 845.5 421t69 208Z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22url(%23b)%22 d=%22M914.5 629q-59.5 129-198 120.5t-242 70Q371 898 241.5 840t-185-199Q1 500 111 398.5t194-171q84-69.5 216.5-135t164 92Q717 342 845.5 421t69 208Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
+}
+
+.yellow-gradient {
+  background: linear-gradient(98.76deg, #ffc500 0%, #c21500 103.78%);
+}
