--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,6 @@
   background: #bd00c7;
 }
 
-
 .gradient-bg {
   animation: AnimateGradient 8s ease infinite;
   animation-direction: alternate;
@@ -43,6 +42,19 @@
 *::-webkit-scrollbar-thumb {
   background-color: rgb(56, 56, 56);
   border-radius: 10em;
+}
+/* if light theme make it red */
+
+@media (prefers-color-scheme: light) {
+  *::-webkit-scrollbar {
+    background-color: rgb(218, 218, 218);
+    width: 0.5em;
+    height: 0.3em;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(192, 192, 192);
+    border-radius: 10em;
+  }
 }
 
 @media (max-width: 500px) {
